kong/db.tf

resource "aws_db_instance" "kong_bd" {
  publicly_accessible = true
  name                = "kongdb"
  allocated_storage    = 100
  db_subnet_group_name = "kong_bd_subnet_group"
  engine               = "postgres"
  engine_version       = var.db_engine_version
  identifier           = "kongdb"
  instance_class       = var.db_instance_type[var.environment] #"db.t2.micro"
  password             = var.db_password
  skip_final_snapshot  = true
  multi_az             = var.environment == "prod" ? true : false
  #storage_encrypted    = true
  username             = var.db_username
  depends_on            = [aws_db_subnet_group.kong_bd_subnet_group]
  vpc_security_group_ids = [aws_security_group.sg_kong.id]
}

#Leeme: https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/USER_VPC.WorkingWithRDSInstanceinaVPC.html#USER_VPC.Subnets
resource "aws_db_subnet_group" "kong_bd_subnet_group" {
  name       = "kong_bd_subnet_group"
  subnet_ids = [aws_subnet.subnet_kong_1.id, aws_subnet.subnet_kong_2.id]
}

#output "subnet_group_id" {
#  value       = join("", aws_db_subnet_group.default.*.id)
#  description = "ID of the created Subnet Group"
#}
